Fixing child tickets